delhi like weather

--- a/index.html
+++ b/index.html
@@ -493,6 +493,58 @@
               </div>
             </div>
             <!-- ELEMENT 7 END -->
+            <!-- ELEMENT 8: Delhi -->
+            <div class="jumbotron  hidden" id="p_8">
+              <p id="weather_in_8" class="city" style="font-size:25px">Element 6</p>
+              <div class="row">
+                <div class="col-xs-7">
+                  <div>
+                    <img src="weather/08.png" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-xs-5">
+                  <div>
+                    <p id="date_8" class="date" style="font-size:14px">Today, Nov 13</p>
+                    <p style="font-size:14px">
+                      <span style="font-size:50px">33</span>°C
+                      <br>no sun, no clouds, just smog, no wind</p>
+                  </div>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-xs-6">
+                  <p>Tomorrow</p>
+                </div>
+                <div class="col-xs-6">
+                  <p>Trend</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-3">
+                  <div>
+                    <img src="weather/08.png" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <div>
+                    <p style="font-size:14px">34°C
+                      <br>same as today, try not to breathe!</p>
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <div>
+                    <img src="weather/08.png" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <div>
+                    <p style="font-size:14px">how knows...</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- ELEMENT 8 END -->
           </div>
           <div class="col-md-5">
             <br>
@@ -547,6 +599,10 @@
                       <div class="radio">
                         <label>
                           <input type="radio" value="7" name="weather">Chennai like</label>
+                      </div>
+                      <div class="radio">
+                        <label>
+                          <input type="radio" value="8" name="weather">Dehli like</label>
                       </div>
                       <div class="radio">
                         <label>
