show share count

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 $("#share_buttons").jsSocials({
                     text: "Make Weather Great Again",
                     showLabel: true,
-                    showCount: false,
+                    showCount: true,
                     shares: ["email", "twitter", "googleplus", "facebook", "pinterest", "whatsapp"]
                 });
             }
