don't show count

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,7 +38,7 @@
                 $("#share_buttons").jsSocials({
                     text: "Make Weather Great Again",
                     showLabel: true,
-                    showCount: true,
+                    showCount: false,
                     shares: ["email", "twitter", "googleplus", "facebook", "pinterest", "whatsapp"]
                 });
             }
@@ -648,10 +647,6 @@
                   <a href="https://github.com/gogannes/makeweathergreatagain">
                                 <img src="GitHub-Mark-32px.png" aria-hidden="true" alt="Github logo" width="16" height="16"> Support
                             </a>
-                  <a href="https://www.browserstack.com">
-                    <img src="browserstack-logo.png" aria-hidden="true" alt="Browserstack logo" width="16" height="16" />
-                    Supported by BrowserStack
-                  </a>
                 </p>
                 <p style="font-size: 10px">Impressum: Schreiber, Gaisbergstraße 10, 81675 Munich, info[at]makeweathergreatagain.com</p>
               </div>
