--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
               </div>
             </div>
             <!-- ELEMENT 7 END -->
-            <!-- ELEMENT 8: Delhi -->
+            <!-- ELEMENT 8: Beijing -->
             <div class="jumbotron  hidden" id="p_8">
               <p id="weather_in_8" class="city" style="font-size:25px">Element 6</p>
               <div class="row">
@@ -511,7 +511,7 @@
                   <div>
                     <p id="date_8" class="date" style="font-size:14px">Today, Nov 13</p>
                     <p style="font-size:14px">
-                      <span style="font-size:50px">33</span>°C
+                      <span style="font-size:50px">10</span>°C
                       <br>no sun, no clouds, just smog, no wind</p>
                   </div>
                 </div>
@@ -533,7 +533,7 @@
                 </div>
                 <div class="col-xs-3">
                   <div>
-                    <p style="font-size:14px">34°C
+                    <p style="font-size:14px">13°C
                       <br>same as today, try not to breathe!</p>
                   </div>
                 </div>
@@ -606,7 +606,7 @@
                       </div>
                       <div class="radio">
                         <label>
-                          <input type="radio" value="8" name="weather">Dehli like</label>
+                          <input type="radio" value="8" name="weather">Beijing like</label>
                       </div>
                       <div class="radio">
                         <label>
