--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
               </div>
             </div>
             <!-- ELEMENT 6 END -->
-            <!-- ELEMENT 7: Chennai -->
+            <!-- ELEMENT 7: Dubai -->
             <div class="jumbotron hidden " id="p_7">
               <p id="weather_in_7" class="city" style="font-size:25px">Element 6</p>
               <div class="row">
@@ -602,7 +602,7 @@
                     <div id="more" class="hidden">
                       <div class="radio">
                         <label>
-                          <input type="radio" value="7" name="weather">Chennai like</label>
+                          <input type="radio" value="7" name="weather">Dubai like</label>
                       </div>
                       <div class="radio">
                         <label>
