trump photo better

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		
 		#element2 {
 			position: relative;
-			left: -15px;
+			left: 5px;
 			top:00px;
 		}
 		#element3 {
@@ -139,7 +139,7 @@
 			
 			<div class="contenttoarrive" id="element2" style="display:none;  z-index:-2; height:120px">
               <p>
-                <img class=".img-responsive" src="pics/trump.png " style="width:180px ;">
+                <img class=".img-responsive" src="pics/trump2.png " style="width:170px ;">
               </p>
             </div>
             <div id="element3" class="contenttoarrive_title" style="display:none;  z-index:-1;">
