--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
 	//	window.scrollTo(0, 0);
 	
             });	  
+			
+			
+	var audio = new Audio('sax.mp3');
+	setTimeout("audio.play()",7000);
     </script>
+	<script>
+	</script>
 	
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
