--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     <p id="date_4_renamedbecausenochangesrequired" class="date" style="font-size:14px">Today, Dez 24</p>
                     <p style="font-size:14px">
                       <span style="font-size:50px">1</span>°C
-                      <br>heavy snowfall all Christmas Eve</p>
+                      <br>heavy snowfall</p>
                   </div>
                 </div>
               </div>
@@ -387,7 +387,7 @@
                 </div>
                 <div class="col-xs-3">
                   <div>
-                    <p style="font-size:14px">snowfall during nigts and clear sky during days</p>
+                    <p style="font-size:14px">snowfall during nights and clear sky during days</p>
                   </div>
                 </div>
               </div>
