--- a/index.html
+++ b/index.html
@@ -723,9 +723,12 @@
             if (query) {
                 var splittedQuery = query.split('&', 2);
                 var weather_query = splittedQuery[0];
+				console.log(weather_query);
                 var city_query = splittedQuery[1];
-                var weather = weather_query.substring(3);
-                var city = city_query.substring(5);
+				var start=city_query.search('city=')
+                console.log(city_query);
+				var weather = weather_query.substring(3);
+                var city = city_query.substring(5+start);
                 var state = {
                     w: weather,
                     city: city
